# GridPACK

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  constance-setup.sh  dockerfile  install_environment_packages.sh  install_gridpack.sh  install_gridpack_deps.sh  load_mpi_module.sh  setup.py
fortran/component/: CMakeLists.txt  bus_component_c.cpp  bus_component_f.F90  component_template.F90  data_collection_c.cpp  data_collection_f.F90  fortran_component.cpp  fortran_component.hpp  fortran_component_wrap.F90
fortran/configuration/: CMakeLists.txt  configuration_test.F90  configurationc.cpp  configurationf.F90  cursor_wrapper.hpp  gridpack.xml
fortran/factory/: CMakeLists.txt  factory_c.cpp  factory_f.F90  factory_template.F90  factory_test.F90
fortran/lib/: CMakeLists.txt
fortran/mapper/: CMakeLists.txt  bus_vector_map_f.F90  full_map_f.F90  gen_matrix_map_f.F90  gen_vector_map_f.F90  mapper_c.cpp  mapper_component.F90  mapper_f.F90  mapper_factory.F90  mapper_test.F90
fortran/math/: CMakeLists.txt  gridpack.xml  hello_math.F90  linear_solver_test.F90  linear_solverc.cpp  linear_solverf.F90  mathc.cpp  mathf.F90  matrix_test.F90  matrixc.hpp  matrixf.F90  nonlinear_solver_c.cpp  nonlinear_solver_f.F90  nonlinear_solver_test.F90  vector_test.F90  vectorc.cpp  vectorf.F90
fortran/network/: CMakeLists.txt  fortran_network.cpp  fortran_network.hpp  fortran_network_wrap.F90  network.F90  network_c.cpp  network_f.F90  network_test.F90  test_component.F90
fortran/parallel/: CMakeLists.txt  communicatorc.cpp  communicatorf.F90  hello.F90  parallelc.cpp
fortran/parser/: CMakeLists.txt  parser_c.cpp  parser_component.F90  parser_data.raw  parser_f.F90  parser_test.F90
python/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
python/src/: CMakeLists.txt  dsf.py  dsf2.py  emt.py  grid2op.py  grid2op_backend.py  gridpack.cpp  hadrec.py  hadrec_comm.py  hello.py  hello_comm.py  pp_backend.py  task_manager.py
src/: BSD_Header  CMakeGraphVizOptions.cmake  CMakeLists.template.txt  CMakeLists.txt  DISCLAIMER  Doxyfile.dev.in  Doxyfile.in  LICENSE  LICENSE.md  MERGE_RESULTS  NOTES  example_configuration.sh  gridpack.cpp  hadrec.py
src/analysis/: CMakeLists.txt  network_analytics.hpp  stat_block.cpp  stat_block.hpp
src/app_environment/: .#app_env.cpp  CMakeLists.txt  app_environment.cpp  app_environment.hpp
src/base_component/: base_network_component.cpp  base_network_component.hpp  data_collection.cpp  data_collection.hpp
src/cmake-modules/: BuildBoostExternalProject.cmake  BuildGAExternalProject.cmake  CMakeGraphVizOptions.cmake  FindCPLEX.cmake  FindGA.cmake  FindGLPK.cmake  FindGUROBI.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  FindParMETIS.cmake  GridPACK.cmake  ResolveCompilerPaths.cmake  set_lu_solver_pkg.cmake
src/component/: CMakeLists.txt  base_analytics_intfc.cpp  base_analytics_intfc.hpp  base_component.cpp  base_component.hpp  base_matrix_ifc.cpp  base_matrix_ifc.hpp  component_data_visitor.hpp  data_collection.cpp  data_collection.hpp  matvec_ifc.cpp  matvec_ifc.hpp  optimization_ifc.cpp  optimization_ifc.hpp
src/configuration/: CMakeLists.txt  configurable.hpp  configuration.cpp  configuration.hpp  no_print.cpp  no_print.hpp
src/dynSim/: LoadFlow.C  admitBuild.C  bcastGlobals.C  dwecc.txt  dynSim.h  readInput.C
src/environment/: CMakeLists.txt  environment.cpp  environment.hpp  no_print.cpp
src/export/: CMakeLists.txt  PSSE23Export.hpp  PSSE33Export.hpp  PSSE34Export.hpp  base_export.hpp
src/expression/: CMakeLists.txt  cplex_optimizer_implementation.cpp  cplex_optimizer_implementation.hpp  expression.cpp  expression.hpp  expression_test.cpp  functions.cpp  functions.hpp  glpk_optimizer_implementation.cpp  glpk_optimizer_implementation.hpp  lpfile_optimizer_implementation.cpp  lpfile_optimizer_implementation.hpp  optimizer.cpp  optimizer.hpp  optimizer_test.cpp  uc_test.cpp  variable.cpp  variable.hpp  variable.hpp~  variable_test.cpp
src/factory/: CMakeLists.txt  base_factory.cpp  base_factory.hpp
src/include/: CMakeLists.txt  gridpack.hpp
src/lib/: CMakeLists.txt  GridPACK.cmake.in
src/mapper/: CMakeLists.txt  base_gen_matrix_map.hpp  base_gen_slab_map.hpp  base_gen_vector_map.hpp  base_mapper.hpp  base_matrix_map.hpp  base_vector_map.hpp  bus_vector_map.hpp  full_map.hpp  gen_matrix_map.hpp  gen_slab_map.hpp  gen_vector_map.hpp  mapper.cpp  mapper.hpp
src/math/: A.matrix  A.xml  CMakeLists.txt  basic_linear_matrix_solver_implementation.cpp  basic_linear_matrix_solver_implementation.hpp  complex_operators.hpp  dae_event.hpp  dae_solver.cpp  dae_solver.hpp  dae_solver_functions.hpp  dae_solver_implementation.cpp  dae_solver_implementation.hpp  dae_solver_interface.hpp  fallback_matrix_methods.hpp  fallback_matrix_operations.hpp  implementation_visitable.hpp  implementation_visitor.cpp  implementation_visitor.hpp  linear_matrix_solver.cpp  linear_matrix_solver.hpp  linear_matrix_solver_implementation.hpp  linear_matrix_solver_interface.hpp  linear_solver.cpp  linear_solver.hpp  linear_solver_implementation.cpp  linear_solver_implementation.hpp  linear_solver_interface.hpp  math.hpp  math_type.hpp  matrix.cpp  matrix.hpp  matrix_implementation.cpp  matrix_implementation.hpp  matrix_interface.hpp  matrix_inverse.cpp  matrix_storage_type.hpp  newton_raphson_solver.cpp  newton_raphson_solver.hpp  newton_raphson_solver_implementation.cpp  newton_raphson_solver_implementation.hpp  (+16 more)
src/network/: CMakeLists.txt  base_network.cpp  base_network.hpp  base_network_component.hpp  bus_visitor.hpp  data_collection.hpp  fields.cpp  fields.hpp  network_topology_interface.hpp  test_network.cpp  test_network.hpp
src/optimization/: CMakeLists.txt  constraint_renderer.hpp  cplex_optimizer_implementation.cpp  expression.cpp  expression.hpp  file_optimizer_implementation.cpp  file_optimizer_implementation.hpp  glpk_optimizer_implementation.cpp  julia_optimizer_implementation.cpp  julia_optimizer_implementation.hpp  line_wrapping_output_filter.hpp  lpfile_optimizer_implementation.cpp  lpfile_optimizer_implementation.hpp  (+6 more)
(+2374 files in other folders)
